# mne-icalabel

./: .codecov.yaml  .codecov.yml  .codespellignore  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  ICL_feature_extration_full.m  ICLabel.py  LICENSE  MANIFEST.in  Makefile  PortToPytorch.ipynb  README.md  automatic_artifact_correction_ica.py  azure-pipelines.yml  binica1270.fdt  binica1270.sc  eeg_autocorr.m  eeg_autocorr_fftw.m  eeg_autocorr_fftw.py  eeg_autocorr_welch.m  eeg_features.py  eeg_infer.py  eeg_rpsd.m  eeg_rpsd.py  eeg_topoplot.py  genfvect.m  index.html  junit-results.xml  mneICA.ipynb  myeeg_SASICA.m  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_testing.txt  setup.cfg  setup.py  (+6 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bot.yaml  circle_artifacts.yml  code-style.yaml  code-style.yml  doc.yaml  draft-pdf.yml  publish.yaml  pytest.yaml  stubs.yaml  unit_tests.yml
0.2/: api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html  whats_new_previous_releases.html
0.2/_static/: documentation_options.js
0.3/: api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html  whats_new_previous_releases.html
0.3/_static/: documentation_options.js  versions.json
0.4/: api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html  whats_new_previous_releases.html
0.4/_static/: documentation_options.js
0.5/: api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.5/_static/: documentation_options.js
0.5/changes/: 0.2.html  0.3.html  0.4.html  0.5.html  index.html
0.6/: .buildinfo  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6/_static/: documentation_options.js
0.6/changes/: 0.2.html  0.3.html  0.4.html  0.5.html  0.6.html  index.html
0.7/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.7/_static/: documentation_options.js
0.7/changes/: 0.2.html  0.3.html  0.4.html  0.5.html  0.6.html  0.7.html  index.html
0.8.0/: cite.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
0.8.0/_static/: documentation_options.js  versions.json
0.8.0/api/: iclabel.html  index.html  megnet.html
0.8.0/changes/: 0.2.html  0.3.html  0.4.html  0.5.html  0.6.html  0.7.html  0.8.html
0.8.1/: objects.inv  search.html
0.8.1/api/: iclabel.html
0.8.1/changes/: 0.3.html  index.html
dev/: .buildinfo  api.html  bibliography.html  cite.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  whats_new.html  whats_new_previous_releases.html
dev/_modules/: index.html
dev/_static/: documentation_options.js  style.css  versions.json
dev/api/: iclabel.html  index.html  megnet.html
dev/auto_examples/: iclabel_automatic_artifact_correction_ica.html  index.html  sg_execution_times.html
dev/changes/: 0.2.html  0.3.html  0.4.html  0.5.html  0.6.html  0.7.html  0.8.html  0.9.html  index.html  latest.html
doc/: Makefile  api.rst  authors.inc  cite.rst  conf.py  index.rst  install.rst  links.inc  make.bat  references.bib  whats_new.rst  whats_new_previous_releases.rst
doc/_static/: versions.json
doc/_templates/: docs-navbar.html  layout.html  version-switcher.html
doc/api/: iclabel.rst  index.rst  megnet.rst
doc/auto_examples/: iclabel_automatic_artifact_correction_ica.ipynb  iclabel_automatic_artifact_correction_ica.py.md5  iclabel_automatic_artifact_correction_ica.rst  iclabel_automatic_artifact_correction_ica_codeobj.pickle  index.rst  searchindex.db  sg_execution_times.rst
doc/changes/: 0.2.rst  0.3.rst  0.4.rst  0.5.rst  0.6.rst  0.8.rst  0.9.0.rst  0.9.rst  authors.inc  index.rst  latest.rst  latest.rst.template
doc/sphinxext/: gh_substitutions.py
eeglab2021.1/sample_data/: eeglab_data_epochs_ica.set  eeglab_ica.set
eeglab2021.1/tutorial_scripts/: .gitignore  bids_process_face_experiment.mlx  eeglab_history.m  event_processing_single_dataset.m  event_processing_study.m  make_eeg_movie.m  plot_study_erp.mlx  source_reconstruction_advanced.mlx  source_reconstruction_eeg.mlx  study_script.m  time_freq_all_elec.mlx
examples/: 00_iclabel.py  README.rst  README.txt  automatic_artifact_correction_ica.py  iclabel_automatic_artifact_correction_ica.py  label_components.py
jacob_old_files/: ICLabel.py  icaact.m  mneICA.ipynb  mneICA_copy.ipynb  test.m  test_feature_extraction.py  test_nn.m
mne_icalabel/: __init__.py  __init__.pyi  _version.py  config.py  config.pyi  conftest.py  features.py  ica_features.py  ica_label.py  ica_net.py  label.py  label_components.py  label_components.pyi  network.py  utils.py
mne_icalabel/annotation/: __init__.py  __init__.pyi  bids.py  bids.pyi
mne_icalabel/assets/: network_sample_output.m
mne_icalabel/commands/: __init__.py  mne_gui_ic_annotation.py  sys_info.py
paper/: paper.bib  paper.md
scripts/: circle_ci_dependencies.sh  release.sh
stable/: .buildinfo  api.html  bibliography.html  cite.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  sg_execution_times.html  whats_new.html  whats_new_previous_releases.html
test_data/: autocorr_data.mat  rpsd_data.mat  topoplot_data.mat
tools/: stubgen.py
v0.1/: .buildinfo  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html  whats_new_previous_releases.html
v0.2/: .buildinfo  api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  whats_new.html  whats_new_previous_releases.html
(+411 files in other folders)
