[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'mne-icalabel'
version = "0.5.dev0"
description = 'MNE-ICALabel: Automatic labeling of ICA components from MEG, EEG and iEEG data with MNE.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '~=3.8'
maintainers = [
    {name = 'Adam Li', email = 'adam.li@columbia.edu'},
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'meg',
    'eeg',
    'ieeg',
    'neuroscience',
    'ica',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    'numpy >= 1.21',
    'scipy >= 1.2.0',
    'mne >= 1.1',
    'pooch',
    'torch',
    'importlib-resources; python_version<"3.9"',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
doc = [
    'mne-icalabel[gui]',
    'mne-icalabel[ica]',
    'memory_profiler',
    'numpydoc',
    'pydata-sphinx-theme',
    'PyQt5',
    'sphinx',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-gallery',
    'sphinx-issues',
]
gui = [
    'matplotlib',
    'mne-qt-browser>=0.2',
    'qtpy',
]
ica = [
    'joblib',
    'python-picard',
    'scikit-learn',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'flake8',
    'mypy',
    'pydocstyle[toml]',
]
test = [
    'mne-icalabel[gui]',
    'mne-icalabel[ica]',
    'mne-bids',
    'pandas',
    'PyQt6',
    'pymatreader',
    'pytest',
    'pytest-cov',
]
all = [
    'mne-icalabel[build]',
    'mne-icalabel[doc]',
    'mne-icalabel[gui]',
    'mne-icalabel[ica]',
    'mne-icalabel[style]',
    'mne-icalabel[test]',
]
full = [
    'mne-icalabel[all]',
]

[project.urls]
documentation = 'https://mne.tools/mne-icalabel'
source = 'https://github.com/mne-tools/mne-icalabel'
tracker = 'https://github.com/mne-tools/mne-icalabel/issues'

[project.scripts]
mne_gui_ic_annotation = 'mne_icalabel.commands.mne_gui_ic_annotation:main'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['mne_icalabel*']
exclude = ['mne_icalabel*tests']

[tool.setuptools.package-data]
"mne_icalabel.iclabel" = ["assets/*.pt"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | doc/
    | examples/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 38
extend_skip_glob = [
    'setup.py',
    'doc/*',
    'examples/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^mne_icalabel.*'
add_ignore = 'D100,D104,D107'

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/mne_icalabel/_version.py',
    '**/mne_icalabel/commands/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
