[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
classifiers = [
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development',
]
dependencies = [
  'mne >= 1.2',
  'numpy >= 1.21',
  'packaging',
  'pooch',
  'psutil',
  'scipy >= 1.4.0',
]
description = 'MNE-ICALabel: Automatic labeling of ICA components from MEG, EEG and iEEG data with MNE.'
keywords = [
  'eeg',
  'ica',
  'ieeg',
  'meg',
  'neuroscience',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'adam.li@columbia.edu', name = 'Adam Li'},
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'mne-icalabel'
readme = 'README.md'
requires-python = '~=3.9'
version = "0.6.0.dev0"

[project.optional-dependencies]
all = [
  'mne-icalabel[build]',
  'mne-icalabel[doc]',
  'mne-icalabel[gui]',
  'mne-icalabel[ica]',
  'mne-icalabel[onnx]',
  'mne-icalabel[style]',
  'mne-icalabel[test]',
  'mne-icalabel[torch]',
]
build = [
  'build',
  'twine',
]
doc = [
  'memory-profiler',
  'mne-icalabel[gui]',
  'mne-icalabel[ica]',
  'mne-icalabel[onnx]',
  'numpydoc',
  'pydata-sphinx-theme==0.14.1',
  'PyQt6',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = [
  'mne-icalabel[all]',
]
gui = [
  'matplotlib',
  'mne-qt-browser>=0.6.0',
  'qtpy',
]
ica = [
  'joblib',
  'python-picard',
  'scikit-learn',
]
onnx = [
  'onnxruntime',
]
style = [
  'bibclean',
  'black',
  'codespell',
  'isort',
  'pydocstyle[toml]',
  'ruff',
  'toml-sort',
  'yamllint',
]
test = [
  'mne-bids',
  'mne-icalabel[gui]',
  'mne-icalabel[ica]',
  'mne-icalabel[onnx]',
  'mne-icalabel[torch]',
  'pandas',
  'pymatreader',
  'PyQt6',
  'pytest',
  'pytest-cov',
]
torch = [
  'torch',
]

[project.scripts]
mne_gui_ic_annotation = 'mne_icalabel.commands.mne_gui_ic_annotation:main'
mne_icalabel-sys_info = 'mne_icalabel.commands.sys_info:run'

[project.urls]
documentation = 'https://mne.tools/mne-icalabel'
source = 'https://github.com/mne-tools/mne-icalabel'
tracker = 'https://github.com/mne-tools/mne-icalabel/issues'

[tool.black]
extend-exclude = '''
(
      __pycache__
    | .github
    | setup.py
    | doc/
    | examples/
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py39']

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/mne_icalabel/_version.py',
  '**/mne_icalabel/commands/*',
  '**/mne_icalabel/conftest.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'doc/*',
  'examples/*',
  'setup.py',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^mne_icalabel.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml -v --color=yes'
junit_family = 'xunit2'
minversion = '6.0'

[tool.ruff]
extend-exclude = [
  'doc',
  'setup.py',
]
line-length = 88

[tool.ruff.per-file-ignores]
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
'mne_icalabel.iclabel.network' = ['assets/*']

[tool.setuptools.packages.find]
exclude = ['mne_icalabel*tests']
include = ['mne_icalabel*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
