[metadata]
name = mne-icalabel
version = attr: mne_icalabel.__version__
url = https://github.com/mne-tools/mne-icalabel
author = mne-icalabel developers
maintainer = Adam Li, Jacob Feitelberg, Patrick Myers
maintainer_email = ali39@jhu.edu
description = MNE-ICALabel: Automatic labeling of ICA components from MEG, EEG and iEEG data with MNE.
keywords = meg, eeg, ieeg, neuroscience, neuroimaging
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
project_urls =
  Documentation = https://mne.tools/mne-icalabel
  Bug Reports = https://github.com/mne-tools/mne-icalabel/issues
  Source = https://github.com/mne-tools/mne-icalabel

[options]
python_requires = ~= 3.7
install_requires =
  mne >= 1.0
  numpy >= 1.16.0
  scipy >= 1.2.0
  torch
  setuptools
  importlib-resources; python_version<"3.9"
packages = find:
include_package_data = True

[bdist_wheel]
universal = true

[flake8]
exclude = __init__.py, mne_icalabel/**/_eeg_features.py
ignore = W504,I101,I100,I201
per-file-ignores =
    mne_icalabel/tests/test_*.py:E402


[check-manifest]
ignore =
    junit-results.xml

[tool:pytest]
addopts =
    --showlocals --durations=20 -ra --junit-xml=junit-results.xml
    --ignore=doc --ignore=examples
filterwarnings =
    error
    # This is for Python 3.10+ and MNE <1.0
    ignore:The distutils package is deprecated.*:DeprecationWarning

[mypy]
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = True
exclude = _script.py

[mypy-tests.*]
strict_optional = false

[pydocstyle]
convention = pep257
match_dir = ^(?!\.|doc|examples).*$
add-ignore = D100,D104,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411
ignore-decorators = property
match = ^(?!.*(setup|__init__|test_.*)).*\.py

[coverage:run]
omit =
    # Do not include test script in coverage report
    *tests*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
